# YAPB

./: CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  YAPB.md
cmake/: yapbConfig.cmake.in
docs/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__lifecycle.html  group__lifecycle.js  group__pop.html  group__pop.js  group__push.html  group__push.js  group__query.html  group__query.js  group__types.html  group__types.js  index.html  menudata.js  navtreedata.js  navtreeindex0.js  structYAPB__Element-members.html  structYAPB__Element.html  structYAPB__Element.js  structYAPB__Packet-members.html  structYAPB__Packet.html  struct__YAPB__Packet__t-members.html  struct__YAPB__Packet__t.html  topics.html  topics.js  yapb_8h.html  (+2 more)
docs/search/: all_1.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  searchdata.js  typedefs_0.js  variables_4.js  variables_5.js
fuzzers/: CMakeLists.txt  fuzzer_parse.c  gen_corpus.c  run.sh
include/: yapb.h
src/: yapb.c
tests/: CMakeLists.txt  test_yapb.c
